--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
                 <div class="text-2xl h-full font-semibold flex flex-col space-y-5 justify-center ">
                     <div class=" flex-grow w-full min-h-0 ">
                         <div class="h-full w-full flex justify-center">
-                            <div class="rounded-full shadow-lg border-white border-8 w-60 h-60"></div>
+                            <div
+                                class="opacity-0 transform translate-y-10 segment rounded-full shadow-lg border-white border-8 w-60 h-60">
+                            </div>
                         </div>
                     </div>
-                    <div class="flex-3 px-12 text-center">
+                    <div class="flex-3 px-12 text-center opacity-0 transform translate-y-10 segment " data-delay="150">
                         Название курса или еще что.
                     </div>
-                    <div class="flex justify-center ">
+                    <div class="flex justify-center  opacity-0 transform translate-y-10 segment " data-delay="200">
                         <button class=" py-2 px-4
                             text-white 
                             font-semibold 
@@ -40,8 +42,10 @@
             </div>
 
         </div>
+
         <!-- Learn more -->
-        <div class="container mx-auto space-y-2 pt-6 h-1/6">
+        <div class=" container mx-auto space-y-2 pt-6 h-1/6 opacity-0 transform translate-y-10 segment learn-more"
+            data-delay="700">
             <div class='flex font-semibold opacity-50 flex-wrap justify-center'>
                 Узнать больше!
             </div>
@@ -58,11 +62,9 @@
 
         </div>
 
-        <!-- BODY and CONTENT -->
-        <div class=" mx-auto pt-6 space-y-10">
-
-
-            <div class="container py-4 px-6  ">
+        <!-- why -->
+        <div class=" mx-auto pt-6 space-y-10 first-elem">
+            <div class="container py-4 px-6  opacity-0 transform translate-y-10 segment ">
                 <div class="text-lg font-semibold text-2xl  text-center ">
                     Зачем мне это?
                 </div>
@@ -98,46 +100,47 @@
             </div>
 
             <!-- Images -->
-            <div class="py-4 space-y-6">
-                <div class="text-lg font-semibold text-2xl  text-center ">
-                    Фотки
-                </div>
-                <div class="flex justify-center px-2">
-                    <div
-                        class="overflow-hidden  shadow-2xl rounded-full py-14  w-full bg-gradient-to-tl from-emerald-400 to-teal-500 ">
-                        <div class="flex box-content justify-center items-center h-full ">
-                            <div id="slider" class="w-full">
-
-                                <div class=" h-72 px-1 ">
-                                    <div class="flex w-full h-full items-center">
-                                        <div
-                                            class="transform scale-y-50 transition duration-300 w-full h-full rounded-lg bg-white shadow-md slide">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="h-72 px-1 ">
-                                    <div class="flex w-full h-full items-center">
-                                        <div
-                                            class="transform scale-y-50 transition duration-300 w-full h-full rounded-lg bg-white shadow-md slide">
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="h-72 px-1 ">
-                                    <div class="flex w-full h-full items-center">
-                                        <div
-                                            class="transform scale-y-50 transition duration-300 w-full h-full rounded-lg bg-white shadow-md slide">
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                            </div>
-                        </div>
-
+            <div class="segment opacity-0 transform translate-y-10">
+                <div class="py-4 space-y-6">
+                    <div class="text-lg font-semibold text-2xl  text-center ">
+                        Фотки
                     </div>
-                </div>
-                <div class=" flex justify-center">
-                    <button class=" py-2 px-4 text-2xl
+                    <div class="flex justify-center px-2">
+                        <div
+                            class="overflow-hidden  shadow-2xl rounded-full py-14  w-full bg-gradient-to-tl from-emerald-400 to-teal-500 ">
+                            <div class="flex box-content justify-center items-center h-full ">
+                                <div id="slider" class="w-full">
+
+                                    <div class=" h-72 px-1 ">
+                                        <div class="flex w-full h-full items-center">
+                                            <div
+                                                class="transform scale-y-50 transition duration-300 w-full h-full rounded-lg bg-white shadow-md slide">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="h-72 px-1 ">
+                                        <div class="flex w-full h-full items-center">
+                                            <div
+                                                class="transform scale-y-50 transition duration-300 w-full h-full rounded-lg bg-white shadow-md slide">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="h-72 px-1 ">
+                                        <div class="flex w-full h-full items-center">
+                                            <div
+                                                class="transform scale-y-50 transition duration-300 w-full h-full rounded-lg bg-white shadow-md slide">
+                                            </div>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class=" flex justify-center">
+                        <button class=" py-2 px-4 text-2xl
                                                                 text-white 
                                                                 font-semibold 
                                                                 rounded-lg 
@@ -145,11 +148,11 @@
                                                                 focus:outline-none 
                                                                 bg-amber-400  
                                                                 transition duration-300 ease-in-out">
-                        Хочу также!
-                    </button>
+                            Хочу также!
+                        </button>
+                    </div>
                 </div>
             </div>
-
 
             <!-- 
                  Отзывы
@@ -159,7 +162,7 @@
                 <Div class='w-1/3 border-b-4 border-dotted border-amber-400'></Div>
             </div>
             <!-- О себе -->
-            <div class="container py-4 px-6 space-y-10">
+            <div class="container py-4 px-6 space-y-10 opacity-0 transform translate-y-10 segment">
                 <div class="text-lg font-semibold text-2xl  text-center ">
                     Обо мне
                 </div>
@@ -184,47 +187,102 @@
             <div class="flex mt-6 justify-center w-full">
                 <Div class='w-1/3 border-b-4 border-dotted border-amber-400'></Div>
             </div>
+
+
             <!-- Отзывы -->
-            <div class="container py-4 px-6 space-y-10">
+            <div class="container py-4 px-6 space-y-10 opacity-0 transform translate-y-10 segment">
                 <div class="text-lg font-semibold text-2xl  text-center ">
                     Отзывы
                 </div>
                 <div id="comments">
                     <div class="px-2 pb-5 w-5/6">
-                        <div class="bg-white  rounded-lg py-10 h-48  shadow-lg"></div>
+                        <div class="bg-white  rounded-lg  px-4   shadow-lg divide-y-2 divide-dashed divide-gray-300">
+                            <div class="flex space-x-5 items-center  py-4 ">
+                                <div class="w-12 h-12 rounded-full border-2 border-gray-300"></div>
+                                <div> Имя пользователя</div>
+                            </div>
+                            <div class="py-4">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem sapiente voluptates
+                                officiis dicta esse porro temporibus velit debitis ea expedita maiores culpa neque
+                                exercitationem dolorum, perferendis sunt delectus numquam inventore?
+                            </div>
+                        </div>
                     </div>
-                    <div class="px-2 pb-2 w-5/6">
-                        <div class="bg-white  rounded-lg py-10 h-48  shadow-lg"></div>
+                    <div class="px-2 pb-5 w-5/6">
+                        <div class="bg-white  rounded-lg  px-4   shadow-lg divide-y-2 divide-dashed divide-gray-300">
+                            <div class="flex space-x-5 items-center  py-4 ">
+                                <div class="w-12 h-12 rounded-full border-2 border-gray-300"></div>
+                                <div> Имя пользователя</div>
+                            </div>
+                            <div class="py-4">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem sapiente voluptates
+                                officiis dicta esse porro temporibus velit debitis ea expedita maiores culpa neque
+                                exercitationem dolorum, perferendis sunt delectus numquam inventore?
+                            </div>
+                        </div>
                     </div>
-                    <div class="px-2 pb-2 w-5/6">
-                        <div class="bg-white  rounded-lg py-10 h-48  shadow-lg"></div>
+                    <div class="px-2 pb-5 w-5/6">
+                        <div class="bg-white  rounded-lg  px-4   shadow-lg divide-y-2 divide-dashed divide-gray-300">
+                            <div class="flex space-x-5 items-center  py-4 ">
+                                <div class="w-12 h-12 rounded-full border-2 border-gray-300"></div>
+                                <div> Имя пользователя</div>
+                            </div>
+                            <div class="py-4">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem sapiente voluptates
+                                officiis dicta esse porro temporibus velit debitis ea expedita maiores culpa neque
+                                exercitationem dolorum, perferendis sunt delectus numquam inventore?
+                            </div>
+                        </div>
                     </div>
-                    <div class="px-2 pb-2 w-5/6">
-                        <div class="bg-white  rounded-lg py-10 h-48  shadow-lg"></div>
-                    </div>
-                    <div class="px-2 pb-2 w-5/6">
-                        <div class="bg-white  rounded-lg py-10 h-48  shadow-lg"></div>
-                    </div>
+
 
 
                 </div>
             </div>
 
             <div class="bg-gradient-to-bl from-emerald-400 to-teal-500 py-12 px-6">
-                <!-- Форма -->
-                <div class="text-lg font-semibold text-3xl text-white mb-6  text-center ">
-                    Успей купить!
+                <div class="flex justify-center opacity-0 transform translate-y-10 segment">
+                    <button class=" py-2 px-4
+                    text-2xl
+                            text-white 
+                            font-semibold 
+                            rounded-lg 
+                            shadow-md 
+                            focus:outline-none 
+                            bg-amber-400  
+                            transition duration-300 ease-in-out">
+                        Купить купить купить
+                    </button>
                 </div>
-                <div class="w-full h-72 bg-white rounded-lg shadow-lg"></div>
-                <!-- ссылки -->
+
             </div>
 
 
         </div>
-    </div>
-    </div>
-    </div>
 
+    </div>
+    <!-- Modal -->
+    <div id="modal-wrapper"
+        class=" opacity-0 bg-gray-600 bg-opacity-60 fixed top-0 left-0 w-screen h-screen   flex items-center justify-center"
+        style="z-index:-100">
+        <div id="modal"
+            class="min-w-3/4 rounded-lg bg-white shadow-lg  py-4 px-4 transition  duration-300 transform scale-0 ">
+            <div class="flex items-center">
+                <div class="mr-4">
+                    <svg class="animate-spin -ml-1 mr-3 h-5 w-5 fill-current text-amber-400"
+                        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4">
+                        </circle>
+                        <path class="opacity-75"
+                            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                        </path>
+                    </svg>
+                </div>
+                <div class="flex-grow">Подождите...</div>
+            </div>
+
+        </div>
+    </div>
     <script type="module" src="./src/app.js"></script>
 </body>
 
